kubernetes/hello-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: "doc185174/spring-boot-hello-world-example:latest"
          ports:
            - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: spring
spec:
  selector:
    app: spring
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
