kubernetes/hello-ws-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ws
spec:
  selector:
    matchLabels:
      app: hello-ws
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-ws
        tier: backend
        track: stable
    spec:
      containers:
        - name: hello-ws
          image: "doc185174/hello-ws:latest"
          ports:
            - name: http
              containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hello-ws
spec:
  selector:
    app: hello-ws
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
