kubernetes/nginx-svc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-lua-gateway
  template:
    metadata:
      labels:
        app: nginx-lua-gateway
    spec:
      containers:
      - name: nginx-lua-gateway
        image: doc185174/nginx-lua-gateway:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lua-gateway
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-lua-gateway
