kubernetes/nginx-ingress-controller.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-lua-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 80
